--- a/vinil_textil.html
+++ b/vinil_textil.html
@@ -18,10 +18,11 @@
 </head>
 
 <body>
-    <!-- Encabezado -->
+
+ <!-- Encabezado -->
     <!-- <header class="container-fluid d-flex justify-content-center" id="encabezado"> -->
         <header class="encabezadoMixin"></header>
-        <p class = "encabezadoMixin">Contacto: 55-51-00-13-25</p>
+        <p class = "encabezadoMixin">VINIL TEXTIL</p>
         <!-- <p class="text-light mb-0 p-2 fs-6">Contacto: 55-51-00-13-25</p> -->
     </header>
 
@@ -41,13 +42,13 @@
                         <a class="inicio--link" aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nosotros--link" href="nosotros.html">Nosotros</a>
+                        <a class="nosotros--link" href="nosotros.html">¿Quién soy?</a>
                     </li>
                     <li class="nav-item">
                         <a class="productos--link" href="productos.html">Productos</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="servicios--link" href="#" id="navbarDropdownMenuLink" role="button"
+                        <a class="servicios--link text-menu-selected" href="#" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Servicios
                         </a>
@@ -55,6 +56,9 @@
                             <li><a class="dropdown-item" href="sublimacion.html">Sublimación</a></li>
                             <li><a class="dropdown-item" href="vinil_textil.html">Vinil Textil</a></li>
                         </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="contacto--link" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
