--- a/contacto.html
+++ b/contacto.html
@@ -1,34 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+   <!-- Required meta tags -->
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="description" content="Pista: Expertos en sublimación y vinil textil">
+   <meta name="keywords" content="ESTAMPADO, SUBLIMACION, VINIL, PERSONALIZACION, PLAYERAS, TAZAS, GORRAS ">
 
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Pista: Expertos en sublimación y vinil textil">
-        <meta name="keywords" content="ESTAMPADO, SUBLIMACION, VINIL, PERSONALIZACION, PLAYERAS, TAZAS, GORRAS ">
+   <!-- Bootstrap CSS -->
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+   <link rel="stylesheet" href="./sass/estilos.css">
+    <title>Contacto</title>
+    <link rel="stylesheet" href="./sass/estilos.css">
+</head>
+<body class="contacto">
 
-        <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="./sass/estilos.css">
-
-        <title>Mantenimiento</title>
-    </head>
-
-<body>
-
- <!-- Encabezado -->
+     <!-- Encabezado -->
     <!-- <header class="container-fluid d-flex justify-content-center" id="encabezado"> -->
         <header class="encabezadoMixin"></header>
-        <p class = "encabezadoMixin">PAGINA EN MANTENIMIENTO</p>
+        <p class = "encabezadoMixin">CONTACTO</p>
         <!-- <p class="text-light mb-0 p-2 fs-6">Contacto: 55-51-00-13-25</p> -->
     </header>
 
@@ -37,7 +29,7 @@
             <a class="navbar-brand" href="index.html">
                 <img src="./img/abejaP.png" alt="Logotipo de la empresa" width="120" height="80" id="imagenAbeja">
             </a>
-    
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -54,7 +46,7 @@
                         <a class="productos--link" href="productos.html">Productos</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="servicios--link dropdown-toggle text-menu-selected" href="#" id="navbarDropdownMenuLink" role="button"
+                        <a class="servicios--link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Servicios
                         </a>
@@ -64,41 +56,25 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="contacto--link" href="contacto.html">Contacto</a>
+                        <a class="contacto--link text-menu-selected" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    
-    <!--SLIDER DE IMAGENES-->
 
-    <div class="mt-5 text-center">
-        <img src="./img/pagina-en-mantenimiento.jpeg" class="img-fluid" alt="Imagen página en mantenimiento">
-    </div>
-
-    <!-- Footer -->
-
-    <section>
-        <div class="w-75 m-auto text-center" id="equipo">
-            <h1 class="mb-5 fs-2"><span class="text-primary"></span></h1>
-            <p class="fs-4"></p>
-        </div>
-        <div class="mt-5 text-center">
-            <img class="w-85 imagen00" src="./img/portada.png" alt="Img demo del producto">
-        </div>
-    </section>
-
-    <!-- Pie de la página -->
-
-    <footer class=" w100 d-flex align-items-center justify-content-center flex-wrap">
-        <p class="fs-5 px-3 pt-3">Pista Sublimación. &copy; Todos Los Derechos Reservados 2022 </p>
-        <div id="iconos">
-            <a href="#"><i class="bi bi-facebook"></i></a>
-            <a href="#"><i class="bi bi-instagram"></i></a>
-            <a href="#"><i class="bi bi-slack"></i></a>
-        </div>
-    </footer>
+    <form action="">
+        <h2 class="contacto_h2">CONTACTO</h2>
+        <label for="">Nombre:</label>
+        <input type="text" name="Nombre" placeholder="Nombre">
+        <label for="">Correo:</label>
+        <input type="text" name="Correo" placeholder="Correo">
+        <label for="">Teléfono:</label>
+        <input type="text" name="Teléfono" placeholder="Teléfono">
+        <label for="">Mensaje:</label>
+        <textarea name="mensaje" placeholder="Escriba aquí su mensaje" id="" cols="30" rows="10"></textarea>
+        <input type="button" value="Enviar" id="btn-Enviar">
+    </form>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -107,5 +83,4 @@
 
 
 </body>
-
 </html>
