--- a/sublimacion.html
+++ b/sublimacion.html
@@ -21,33 +21,33 @@
     <!-- Encabezado -->
     <!-- <header class="container-fluid d-flex justify-content-center" id="encabezado"> -->
         <header class="encabezadoMixin"></header>
-        <p class = "encabezadoMixin">Contacto: 55-51-00-13-25</p>
+        <p class = "encabezadoMixin">SUBLIMACIÓN</p>
         <!-- <p class="text-light mb-0 p-2 fs-6">Contacto: 55-51-00-13-25</p> -->
     </header>
 
     <nav class="navbar navbar-expand-lg navbar-light" id="menu">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="./img/abejaP.png" alt="" width="120" height="80">
+                <img src="./img/abejaP.png" alt="Logotipo de la empresa" width="120" height="80" id="imagenAbeja">
             </a>
-
+    
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
+                    <li class="nav-item menu-select">
                         <a class="inicio--link" aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nosotros--link" href="nosotros.html">Nosotros</a>
+                        <a class="nosotros--link" href="nosotros.html">¿Quién soy?</a>
                     </li>
                     <li class="nav-item">
                         <a class="productos--link" href="productos.html">Productos</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="servicios--link" href="#" id="navbarDropdownMenuLink" role="button"
+                        <a class="servicios--link dropdown-toggle text-menu-selected" href="#" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Servicios
                         </a>
@@ -55,6 +55,9 @@
                             <li><a class="dropdown-item" href="sublimacion.html">Sublimación</a></li>
                             <li><a class="dropdown-item" href="mantenimiento.html">Vinil Textil</a></li>
                         </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="contacto--link" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
